fix(test): 테스트 오류 수정
List.of(null) => NPE